Hide overflow from body to avoid scroll bars

--- a/static/index.css
+++ b/static/index.css
@@ -35,6 +35,7 @@ time, mark, audio, video {
     background-color: #152028;
     color: white;
     font-family: monospace;
+    overflow: hidden;
 }
 
 .navigation, .main, .news, .stat {
